Funkcje odpowiedzialne za wyswietlanie w odpowiednim porzadku i wypisywanie do pliku. Oddzielenie definicji struktury do pliku BSTstruct. Zmiana dotycząca wstawiania wyrazów: od teraz krótsze wyrazy są wstawiane po prawej stronie.

--- a/ASD4/ASD4.vcxproj
+++ b/ASD4/ASD4.vcxproj
@@ -125,9 +125,13 @@
   <ItemGroup>
     <ClCompile Include="BCD.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Wypisywanie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BCD.h" />
+    <ClInclude Include="BCDstruct.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="Wypisywanie.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
